@@ -78,26 +78,21 @@ class StreakMask:
         else:
             self.assem = None
 
-    def getStreakMaskCalib(self,evt):
+    def getStreakMaskCalib(self, evt, calib=None):
         if self.assem is not None:
-            tic = time.time()
 
-            tic1 = time.time()
-            img = self.det.image(evt)
-
-            tic2 = time.time()
-
-            tic3 = time.time()
+            if calib is not None:
+                img = self.det.image(evt, calib)
+            else:
+                img = self.det.image(evt)
 
             # Crop centre of image
             imgCrop = img[self.ix-self.halfWidth:self.ix+self.halfWidth,self.iy-self.halfWidth:self.iy+self.halfWidth]
-            tic4 = time.time()
 
             # Blur image
             imgBlur=sg.convolve(imgCrop,np.ones((2,2)),mode='same')
             mean = imgBlur[imgBlur>0].mean()
             std = imgBlur[imgBlur>0].std()
-            tic5 = time.time()
 
             # Mask out pixels above 1 sigma
             mask = imgBlur > mean+self.sigma*std
@@ -105,7 +100,6 @@ class StreakMask:
             signalOnEdge = mask * self.imgEdges
             mySigInd = np.where(signalOnEdge==1)
             mask[self.myInd[0].ravel(),self.myInd[1].ravel()] = 1
-            tic6 = time.time()
 
             # Connected components
             myLabel = label(mask, neighbors=4, connectivity=1, background=0)
@@ -114,7 +108,6 @@ class StreakMask:
             myParts = np.unique(myLabel[self.myInd])
             for i in myParts:
                 myMask[np.where(myLabel == i)] = 0
-            tic7 = time.time()
 
             # Delete edges
             myMask[self.myInd]=1
@@ -128,9 +121,6 @@ class StreakMask:
             calibMask=np.ones((self.calibSize,))
             calibMask[pixInd.astype(int)] = 0
             calibMask=calibMask.reshape(self.calibShape)
-            tic8 = time.time()
-
-            #print "calib, image, edge, crop, blur, mask, connect, convert: ", tic1-tic, tic2-tic1, tic3-tic2, tic4-tic3, tic5-tic4, tic6-tic5, tic7-tic6, tic8-tic7
 
             return calibMask
         else:
